@@ -1,4 +1,4 @@
-; $Id: views.info,v 1.7.6.9 2010-02-06 13:29:48 dereine Exp $
+; $Id: views.info,v 1.7.6.10 2010-02-07 13:04:19 dereine Exp $
 name = Views
 description = Create customized lists and queries from your database.
 package = Views
@@ -248,3 +248,4 @@ files[] = tests/views_query.test
 files[] = tests/views_groupby.test
 files[] = tests/views_pager.test
 files[] = tests/views_glossary.test
+files[] = tests/views_exposed_form.test
