@@ -90,6 +90,9 @@ Views 3.x-7.x-dev
     o by dereine: Fix signature of views_process_check_options.
     o #705080 by dereine: Fix renamed history_user to history table.
     o #228510 by dagmar, KarenS and others, ported by chx: Exposed sorts!!!
+    o by dereine: add testing for renaming a exposed form reset button
+    o #660196 by dagmar: Allow changing the "Reset" button label in the exposed form settings.
+
 
 Views 6.x-3.x-dev
     o #396380 by merlinofchaos, dereine and dagmar: Initial support for GROUP BY queries!!!!!!!!!!!!
